crates/courier-ftp/src/components/prompts/snapshots/courier_ftp__components__prompts__snapshot_tests__password_60x20_scrolls.snap
---
source: crates/courier-ftp/src/components/prompts/snapshot_tests.rs
expression: "h.render(60, 20)"
---
 1 Local                                                    
┏▶Local ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃                                                          ┃
┃                                                          ┃
┃ ┌ Password required ───────────────────────────────────┐ ┃
┃ │ Password for alice@web01.example.com:22              │ ┃
┃ │ Permission denied, please try again (attempt 2 of    │ ┃
┃ │ 3).                                                  │ ┃
┃ │                                                      │ ┃
┃ │ Password:   [                                  ]     │ ┃
┃ │                                                      │ ┃
┃ │ [ ] Remember for this session                        │ ┃
┃ │ [ ] Save in the vault                                │ ┃
┃ │                                                      │ ┃
┃ │               [ OK ]        [ Cancel ]               │ ┃
┃ └──────────────────────────────────────────────────────┘ ┃
┃                                                          ┃
┃                                                          ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 – not connected │ Type: Auto │ ⇅ off          compact mode
