crates/courier-ftp/src/components/prompts/snapshots/courier_ftp__components__prompts__snapshot_tests__status_badge_two_prompts_160x48.snap
---
source: crates/courier-ftp/src/components/prompts/snapshot_tests.rs
expression: screen
---
 Quickconnect (not available yet)                                                                                                                               
 1 Local                                                                                                                                                        
┌ Message log · Tab 1 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Local ───────────────────────────────────────────────────────────────────────┐┏▶Remote ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                         Not connected to any server                          ┃
│                                                                              │┃                  Ctrl-s Site Manager · Ctrl-k Quickconnect                   ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
│                                                                              │┃                                                                              ┃
└──────────────────────────────────────────────────────────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌ Queue ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│(not available yet)                                                                                                                                           │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 – not connected │ ⚠ 2 prompts │ Type: Auto │ ⇅ off                                                    F1 help  F5 copy  F6 move  F7 mkdir  F8 delete  F10 quit
