crates/courier-ftp/src/components/prompts/snapshots/courier_ftp__components__prompts__snapshot_tests__status_badge_two_prompts_80x24.snap
---
source: crates/courier-ftp/src/components/prompts/snapshot_tests.rs
expression: screen
---
 Quickconnect (not available yet)                                               
 1 Local                                                                        
┌ Message log · Tab 1 ─────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Local ───────────────────────────────┐┏▶Remote ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│                                      │┃                                      ┃
│                                      │┃                                      ┃
│                                      │┃                                      ┃
│                                      │┃                                      ┃
│                                      │┃                                      ┃
│                                      │┃     Not connected to any server      ┃
│                                      │┃Ctrl-s Site Manager · Ctrl-k Quickcon…┃
│                                      │┃                                      ┃
│                                      │┃                                      ┃
│                                      │┃                                      ┃
│                                      │┃                                      ┃
└──────────────────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌ Queue ───────────────────────────────────────────────────────────────────────┐
│(not available yet)                                                           │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 – not connected │ ⚠ 2 prompts │ Type: Auto │ ⇅ off   F1 help  F5 copy  F6 move
